--- a/page4.html
+++ b/page4.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="ext_menu-x" data-rv-view="76">
+<section id="ext_menu-x" data-rv-view="270">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -44,7 +44,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange">GETModer Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange">GETModer Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/p">bootstrap menu</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-16" data-rv-view="80" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-16" data-rv-view="274" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -179,7 +179,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-y" data-rv-view="78" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-y" data-rv-view="272" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>&nbsp;&nbsp;<a href="page4.html">Terms and Conditions</a>&nbsp; &nbsp;<a href="page5.html">Privacy Policy</a>&nbsp; &nbsp;<a href="index.html#extToggle1-24">FAQ</a>&nbsp;&nbsp;<a href="page3.html">Contact</a>&nbsp;<br>GETMOder. Level 11, 157 Lambton Quay<br>Wellington 6011<br>New Zealand<br>Email: <a href="mailto:admin@getmoder.io">admin@getmoder.io</a><br>Copyright (c) 2018 GETModer Foundation. All rights reserved</p>
