--- a/page3.html
+++ b/page3.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">web creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="68" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/i">how to build a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="68" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -76,7 +76,7 @@
                            <div class="container2">
                                 <h3 class="mbr-section-title display-2">GETModer 2018</h3>
                                 <div class="mbr-section-text lead">
-                                    <p>IEO starts on 15 March<br>End on 15 June</p>
+                                    <p>IEO starts on 15 March<br>and ends on 15 June</p>
                                 </div>
                                 <div class="countdown" data-end="2018/06/15"></div>
                             </div>
@@ -87,7 +87,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer 2018">
-                                <input type="hidden" value="iU60TBeHyM/Zt20X0OGBZXXcYdc0vN9hMM19LWsx/GI64YmLNx5h4grYs00tmGCk6HICef7mUaAVSE/GNoFoMNx4Pb9awlfZos/N5JeYjdWSvkqj7isdKQEa2c26jCBS" data-form-email="true">
+                                <input type="hidden" value="vRxuYAfUhIohpWslSoQjDwMzHwV1jC8x9CZV6VWEw1ZtKlMzFqsDdAG54J8NTY5Pr9R+g49lZhj1xiqVrqjEZ87VAmqBpcaO2+aMS6FsBM/U0O+zD8bcVA/a4tCWFGfm" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
