--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-33" data-rv-view="2" style="background-image: url(assets/images/picture22-1024x576.jpg); padding-top: 160px; padding-bottom: 120px;">
+<section class="engine"><a href="https://mobirise.co/h">how to make a website</a></section><section class="mbr-section extCountdown1 mbr-background mbr-after-navbar" id="extCountdown1-33" data-rv-view="2" style="background-image: url(assets/images/picture22-1024x576.jpg); padding-top: 160px; padding-bottom: 120px;">
 
     
 
@@ -240,7 +240,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box5-4p" data-rv-view="188" style="background-image: url(assets/images/img-wrapper-4-1920x550.jpg); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box5-4p" data-rv-view="20" style="background-image: url(assets/images/img-wrapper-4-1920x550.jpg); padding-top: 80px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(247, 218, 100);">
     </div>
@@ -275,7 +275,7 @@
 
 </section>
 
-<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="20" style="background-image: url(assets/images/contact-bg-1960x1000.jpg); padding-top: 100px; padding-bottom: 150px;">
+<section class="mbr-section extMsg-box4 tab-content" id="extMsg-box4-1n" data-rv-view="23" style="background-image: url(assets/images/contact-bg-1960x1000.jpg); padding-top: 100px; padding-bottom: 150px;">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -299,7 +299,7 @@
             </div> 
 </section>
 
-<section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-parallax-background" id="msg-box1-2y" data-rv-view="23" style="background-image: url(assets/images/corporate-grey-low-poly-geometric-motion-background-video-animation-hd-1920x1080-nypfik1eg-f0008-1920x1080.png); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-parallax-background" id="msg-box1-2y" data-rv-view="26" style="background-image: url(assets/images/corporate-grey-low-poly-geometric-motion-background-video-animation-hd-1920x1080-nypfik1eg-f0008-1920x1080.png); padding-top: 30px; padding-bottom: 30px;">
 
     
     <div class="container">
@@ -325,7 +325,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2v" data-rv-view="26" style="background-color: rgb(65, 168, 95); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section article mbr-section__container" id="content1-2v" data-rv-view="29" style="background-color: rgb(65, 168, 95); padding-top: 40px; padding-bottom: 40px;">
 
     <div class="container">
         <div class="row">
@@ -336,7 +336,7 @@
 
 </section>
 
-<section class="mbr-section extTable1 mbr-parallax-background" id="extTable1-23" data-rv-view="28" style="background-image: url(assets/images/picture13-1281x721.png); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section extTable1 mbr-parallax-background" id="extTable1-23" data-rv-view="31" style="background-image: url(assets/images/picture13-1281x721.png); padding-top: 40px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(43, 6, 128);">
     </div>
@@ -352,7 +352,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content2-3o" data-rv-view="31" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content2-3o" data-rv-view="34" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -362,7 +362,7 @@
 
 </section>
 
-<section class="mbr-section extTable1 mbr-parallax-background" id="extTable1-k" data-rv-view="33" style="background-image: url(assets/images/thrn06-compressor-2000x1125.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section extTable1 mbr-parallax-background" id="extTable1-k" data-rv-view="36" style="background-image: url(assets/images/thrn06-compressor-2000x1125.jpg); padding-top: 40px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(255, 255, 255);">
     </div>
@@ -378,7 +378,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="content5-29" data-rv-view="36" style="background-image: url(assets/images/contact-1366x765.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="content5-29" data-rv-view="39" style="background-image: url(assets/images/contact-1366x765.jpg); padding-top: 40px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(41, 105, 176);">
     </div>
@@ -407,7 +407,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-3m" data-rv-view="39" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-3m" data-rv-view="42" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -418,7 +418,7 @@
 
 </section>
 
-<div id="custom-html-3g" custom-code="true" data-rv-view="41">
+<div id="custom-html-3g" custom-code="true" data-rv-view="44">
     <iframe id="JotFormIFrame-80658564967475" onload="window.parent.scrollTo(0,0)" allowtransparency="true" allowfullscreen="true" src="https://form.jotform.me/80658564967475" frameborder="0" style="width: 1px;
       min-width: 100%;
       height:539px;
@@ -484,7 +484,7 @@
       }
       </script></div>
 
-<div id="custom-html-3i" custom-code="true" data-rv-view="42">
+<div id="custom-html-3i" custom-code="true" data-rv-view="45">
     <iframe id="JotFormIFrame-80660901167455" onload="window.parent.scrollTo(0,0)" allowtransparency="true" allowfullscreen="true" src="https://form.jotform.me/80660901167455" frameborder="0" style="width: 1px;
       min-width: 100%;
       height:539px;
@@ -550,7 +550,7 @@
       }
       </script></div>
 
-<div id="custom-html-3n" custom-code="true" data-rv-view="43">
+<div id="custom-html-3n" custom-code="true" data-rv-view="46">
     <iframe id="JotFormIFrame-80662742067459" onload="window.parent.scrollTo(0,0)" allowtransparency="true" allowfullscreen="true" src="https://form.jotform.me/80662742067459" frameborder="0" style="width: 1px;
       min-width: 100%;
       height:539px;
